--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <meta property="og:image" content="https://reactjs.org/logo-og.png" />
+    <meta property='og:title' content="React Favorite Movie Lister"/>
+    <meta property='og:image' content="https://reactjs.org/logo-og.png"/>
+    <meta property='og:description' content="Find your favorite movies and add them to easy to manipulate lists with drag and drop"/>
+    <meta property='og:url' content="favorite-lister.surge.sh" />
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -21,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Favorite Lister</title>
+    <title>Favorite Movie Lister</title>
   </head>
   <body>
     <noscript>
