--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
     <meta property='og:title' content="React Favorite Movie Lister"/>
-    <meta property='og:image' content="https://reactjs.org/logo-og.png"/>
+    <meta property='og:image' content="//reactjs.org/logo-og.png"/>
     <meta property='og:description' content="Find your favorite movies and add them to easy to manipulate lists with drag and drop"/>
-    <meta property='og:url' content="favorite-lister.surge.sh" />
+    <meta property='og:url' content="//favorite-lister.surge.sh" />
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
